--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,7 +4,7 @@ pipeline{
     environment{
         DOCKERHUB_USERNAME = "manjumulky"
             APP_NAME = "gitops-orgo-app"
-            IMAGE_TAG = "$(BUILD_NUMBER)"
+            IMAGE_TAG = "${BUILD_NUMBER}"
             IMAGE_NAME = "${DOCKER_USERNAME}" + "/" + "${APP_NAME}"
             REGISTRY_CREDS = 'dockerhub'
     }
