--- a/jenkinsfile
+++ b/jenkinsfile
@@ -24,7 +24,7 @@ pipeline{
             steps{
                 script{
                     git credentialsId: 'github',
-                    url: 'https://github.com/manjumulky/gitops_argocd_project.git'
+                    url: 'https://github.com/manjumulky/gitops_argocd_project.git',
                     branch: 'main'
                 }
             }
