--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,13 +3,13 @@
         "git-opsargocd-ci": {
             "isDefault": true,
             "runWith": "jenkins-master",
-            "name": "git-opsargocd-ci"
+            "name": "git-opsargocd-ci",
             
         }
     },
     "jenkins-runner.hostConfigs": {
         "jenkins-master": {
-            "url": "http://13.126.106.209:8080",
+            "url": "http://3.110.94.127:8080",
             "user": "admin",
             "password": "victor150486",
             "useCrumbIssuer": true,  
